# MultiDim-PDE-Solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  cuda.sh
include/: parser.h  solver.h
src/: main.cpp  parser.cpp  solver.cu  solver_new.cu
tests/: CMakeLists.txt  simple_test_runner.cpp  test_derivatives.cpp  test_integration.cpp  test_main.cpp  test_parser.cpp  test_solver.cpp
